# Trivial

./: .clang-format  .gitignore  CMakeLists.txt  README.md  temp.md
source/: test.cpp
source/leetcode/: CMakeLists.txt  que01.cpp
trivial/: CMakeLists.txt
trivial/coroutine/: CMakeLists.txt  README.md
trivial/coroutine/source/: coroutine.cpp  coroutine.h  scheduler.cpp  scheduler.h
trivial/coroutine/test/: test_coroutine.cpp  test_ucontext.cpp
trivial/cpplog/: CMakeLists.txt  README.md
trivial/cpplog/source/: lock_free_queue.h  log.cpp  log.h  log_appender.cpp  log_appender.h  log_backend.cpp  log_backend.h  log_event.cpp  log_event.h  logger.cpp  logger.h
trivial/cpplog/test/: test_log.cpp  timer.h
trivial/cprogram/: 6.10.c  6.4.c  7.2.c  7.3.c  7.6.c  7.7.c  7.8.c  7findbook.c  7findbook2.c  CMakeLists.txt  README.md  bookshop.c  bookstore.c  ce2.c  dig_trans.c  fruit.c  min_common_value.c  q5.c  reverse_words.c  test.c  test3.c  triangle.c
trivial/json/: CMakeLists.txt  README.md
trivial/json/source/: json.h
trivial/json/test/: test.cpp
trivial/leetcode/: CMakeLists.txt  README.md  que01.cpp  que02.cpp  que03.cpp  tire.cpp
trivial/leetcode/include/: common.h
trivial/leetcode/source/: q1668.cpp  q1790.cpp  q1796.cpp  q18.cpp  q1800.cpp  q2982.cpp  q54.cpp  q6202.cpp  q76.cpp  q769.cpp  q816.cpp  q870.cpp  q927.cpp  q940.cpp  que02.cpp
trivial/single/: CMakeLists.txt  eight_digits.c  eight_digits_bfs.c  zigzag.cpp
trivial/thread_pool/: CMakeLists.txt  README.md
trivial/thread_pool/source/: main.cpp  thread_pool.h
