set(EXECUTABLE_OUTPUT_PATH ${OUTPUT_BASE}/cprogram)

link_libraries(m)

add_executable(reverse_words reverse_words.c)
add_executable(min_common_value min_common_value.c)
add_executable(bookstore bookstore.c)
add_executable(triangle triangle.c)
add_executable(6.4 6.4.c)
add_executable(6.10 6.10.c)
add_executable(7.2 7.2.c)
add_executable(7.6 7.6.c)
add_executable(7.7 7.7.c)
add_executable(7.8 7.8.c)
